pkg/config/analysis/analyzers/testdata/conflicting-gateways-subSelector.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: beta
spec:
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
    cusKey: cusValue
  servers:
    - port:
        number: 80
        name: tcp
        protocol: TCP
      hosts:
        - "foo.bar"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: alpha
spec:
  selector:
    istio: ingressgateway
    cusKey: cusValue
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "foo.bar"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    istio: ingressgateway
    app: istio-ingressgateway
    cusKey: cusValue
  name: my-ingressgateway-1
spec:
  containers:
    - args:
      name: istio-proxy
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    istio: ingressgateway
    app: istio-ingressgateway
    cusKey: cusValue
  name: my-ingressgateway-2
spec:
  containers:
    - args:
      name: istio-proxy
